<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:text="@string/label_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:background="@drawable/bg_gradient"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="14dp"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name_register"
            android:textColor="@color/white"
            />
        <EditText
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="@color/white"
            />
        <EditText
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="@color/white"
            />
        <EditText
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_go_login"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>