<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:id="@+id/cvStep3"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_confirmed_appointment_data"
                    />
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_description"
                        />
                    <TextView
                        android:id="@+id/tvConfirmDescription"
                        tools:text="Dolor de cabeza"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_type"
                        />
                    <TextView
                        android:id="@+id/tvConfirmSpecialty"
                        tools:text="Consulta"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_specialty"
                        />
                    <TextView
                        android:id="@+id/tvConfirmType"
                        tools:text="Oftalología"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_doctor"
                        />
                    <TextView
                        android:id="@+id/tvConfirmDoctor"
                        tools:text="Medico test"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                       />
                </LinearLayout>
                <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_schedule_date"
                    />
                <TextView
                    android:id="@+id/tvConfirmDate"
                    tools:text="2020-08-08"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_schedule_time"
                        />
                    <TextView
                        android:id="@+id/tvConfirmTime"
                        tools:text="04:30 PM"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnConfirmAppointment"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:drawableEnd="@drawable/ic_check"
                    style="@style/MenuButton"
                    android:text="@string/btn_confirm"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>